--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-        <string name="app_name">intelClassOne</string>
+    <string name="app_name">intelClassOne</string>
     <!--    <string name="intel_class_1">Intel class 1</string>-->
-<string name="web_client_id">728487131628-8581qc7j83k8diijatutcfseqqvl12dr.apps.googleusercontent.com</string>
+    <string name="web_client_id">728487131628-8581qc7j83k8diijatutcfseqqvl12dr.apps.googleusercontent.com</string>
+    <string name="splash_img">splash_img</string>
 </resources>
